<resources>
    <string name="app_name">RecipeCalculator</string>
    <string name="tab_text_1">Recipe</string>
    <string name="tab_text_2">Limiting Ingredient(s)</string>
    <string name="tab_text_3">Adjusted Recipe</string>
    <string name="new_ingredient">Ingredient</string>
    <string name="new_quantity">Quantity</string>
    <string name="recipe_title">Recipe Title</string>


    <string name="btn_save_recipe">Save <br/>Recipe</string>
    <string name="btn_add_ingredient">Add <br/>Ingredient
    </string>
    <string name="btn_new_recipe">New <br/>Recipe</string>
    <string name="btn_delete_recipe">Delete <br/>Recipe</string>
    <string name="btn_previous_recipe">Prev</string>
    <string name="btn_next_recipe">Next</string>
    <string name="btn_calculate">Calculate</string>


    <string-array name="Units_Long">
        <item>Grams(g)</item>
        <item>Ounces(oz)</item>
        <item>Milliliters(ml)</item>
        <item>Cups</item>
        <item>Teaspoons(tsp)</item>
        <item>Items</item>
    </string-array>
    <string-array name="Units">
        <item>(g)</item>
        <item>(oz)</item>
        <item>(ml)</item>
        <item>(cups)</item>
        <item>(tsp)</item>
        <item>(#)</item>
    </string-array>
</resources>