<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <Button
        android:id="@+id/btnPreviousRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_previous_recipe"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toStartOf="@+id/txtRecipeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNextRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_next_recipe"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtRecipeTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtRecipeTitle"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center|center_vertical"
        android:hint="@string/recipe_title"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@id/scrollView2"
        app:layout_constraintEnd_toStartOf="@id/btnNextRecipe"
        app:layout_constraintStart_toEndOf="@id/btnPreviousRecipe"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFF2D8"
        app:layout_constraintBottom_toTopOf="@+id/cl_Buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRecipeTitle">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/tableRowIngredient"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/table_row_dark_blue">

                <EditText
                    android:id="@+id/txtDefaultIngredient"
                    android:layout_width="153dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/new_ingredient"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/txtDefaultQuantity"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/new_quantity"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray" />

                <Spinner
                    android:id="@+id/spnDefaultUnits"
                    android:layout_width="95dp"
                    android:layout_height="match_parent"
                    android:entries="@array/Units"
                    android:paddingRight="0dp"
                    android:spinnerMode="dropdown" />

                <ImageButton
                    android:id="@+id/ibtnDeleteIngredient"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00FFFFFF"
                    android:scaleType="center"
                    app:srcCompat="@android:drawable/ic_delete" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRowAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/btnAddIngredient"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_column="3"
                    android:background="#00FFFFFF"
                    android:scaleX="2"
                    android:scaleY="2"
                    app:srcCompat="@android:drawable/ic_input_add" />
            </TableRow>

        </TableLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_Buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnDeleteRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/btn_delete_recipe"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/btnSaveRecipe"
            app:layout_constraintStart_toEndOf="@+id/btnNewRecipe"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSaveRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/btn_save_recipe"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnNewRecipe"
            android:layout_width="81dp"
            android:layout_height="0dp"

            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/btn_new_recipe"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>