<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6">

    <EditText
        android:id="@+id/txtRecipeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:focusable="false"
        android:gravity="center|center_vertical"
        android:hint="@string/recipe_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#803F51B5"
        app:layout_constraintBottom_toTopOf="@id/cl_Buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRecipeTitle">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/tableRowIngredient"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/table_row_dark_red">

                <EditText
                    android:id="@+id/txtDefaultIngredient"
                    android:layout_width="153dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/new_ingredient"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtDefaultQuantity"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/new_quantity"
                    android:inputType="numberDecimal" />

                <Spinner
                    android:id="@+id/spnDefaultUnits"
                    android:layout_width="87dp"
                    android:layout_height="match_parent"
                    android:entries="@array/Units"
                    android:paddingRight="0dp"
                    android:spinnerMode="dropdown" />

                <ImageButton
                    android:id="@+id/ibtnDeleteIngredient"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00DF8080"
                    android:scaleType="center"
                    app:srcCompat="@android:drawable/ic_delete" />

            </TableRow>
        </TableLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_Buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#80FF6F6F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <Spinner
            android:id="@+id/spnIngredientSelection"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:paddingRight="0dp"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toStartOf="@+id/btnAddIngredient"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--
        <Button
            android:id="@+id/btnAddIngredient"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/btn_add_ingredient"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/btnCalculate"
            app:layout_constraintTop_toTopOf="parent" />
-->

        <ImageButton
            android:id="@+id/btnAddIngredient"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="3"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:background="#00FFFFFF"
            android:scaleX="2"
            android:scaleY="2"
            app:layout_constraintEnd_toStartOf="@+id/btnCalculate"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_input_add" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="49dp"

            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/btn_calculate"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>